<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prohor.calc3.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/primaryLightColor">


    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_dot"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button0"
        app:layout_constraintRight_toLeftOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Negative"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button18"
        app:layout_constraintRight_toLeftOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Equal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button19"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        app:layout_constraintRight_toLeftOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintRight_toLeftOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Minus"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        app:layout_constraintRight_toLeftOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button16"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        app:layout_constraintRight_toLeftOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button15"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Umn"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:cursorVisible="true"
        android:editable="true"
        android:elegantTextHeight="true"
        android:filterTouchesWhenObscured="false"
        android:text="@string/tvText"
        android:textAlignment="viewEnd"
        android:textColor="@color/secondaryDarkColor"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Clear"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button16"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Sqrt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button17"
        app:layout_constraintRight_toLeftOf="@+id/button15"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Pow"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button16"
        app:layout_constraintRight_toLeftOf="@+id/button13"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/B_Del"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="284dp"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:textAlignment="textEnd"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>
